--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,13 +7,13 @@
   "content_scripts": [
     {
       "matches": ["*://*.replit.com/*"],
-      "js": ["replit-rpc.js"]
+      "js": ["content.js"]
     }
   ],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "pop.html"
+    "default_popup": "popup.html"
   }
 }
